--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -1,138 +1,144 @@
 /* 投稿入力画面 */
 
 .skill-box {
-    margin-top: 85px;
-    text-align: center;
-    /* margin: 0 auto; */
-    height: 140vh;
-    width: 100%;
-    height: 100%;
+  margin-top: 85px;
+  text-align: center;
+  /* margin: 0 auto; */
+  height: 140vh;
+  width: 100%;
+  height: 100%;
 }
 
 .skill-box2 {
-    margin: 0 auto;
-    background-color: #ffffff;
-    width: 50%;
-    height: 130vh;
+  margin: 0 auto;
+  background-color: #ffffff;
+  width: 50%;
+  height: 130vh;
 }
 
 .post {
-    padding-top: 40px;
-    margin-bottom: 40px;
+  padding-top: 40px;
+  margin-bottom: 40px;
 }
 
+.post h2 {
+  padding-top: 20px;
+}
+
+#skill-image {
+  border-style: none;
+}
 .skill-name2 {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .skill-name2 p {
-    text-align: left;
-    margin: 15px 20%;
+  text-align: left;
+  margin: 15px 20%;
 }
 
 .skill-category {
-    text-align: left;
-    margin: 15px 20% 80px;
+  text-align: left;
+  margin: 15px 20% 80px;
 }
 
 .skill-image２ {
-    height: 5vh;
-    text-align: left;
-    margin: 15px 20% 70px;
+  height: 5vh;
+  text-align: left;
+  margin: 15px 20% 70px;
 }
 
 .skill-formulation p {
-    text-align: left;
-    margin: 15px 20%;
-    white-space: pre-wrap;
+  text-align: left;
+  margin: 15px 20%;
+  white-space: pre-wrap;
 }
 
 .skill-recipe p {
-    text-align: left;
-    margin: 15px 20%;
+  text-align: left;
+  margin: 15px 20%;
 }
 
 input[type="text"] {
-    padding: 10px;
-    width: 60%;
+  padding: 10px;
+  width: 60%;
 }
 
 textarea {
-    padding: 10px;
-    width: 60%;
-    height: 200px;
+  padding: 10px;
+  width: 60%;
+  height: 200px;
 }
 
 .skill-btn {
-    width: 88%;
-    text-align: left;
-    margin: 20px 20%;
+  width: 88%;
+  text-align: left;
+  margin: 20px 20%;
 }
 
 .btn2 {
-    display: inline-block;
-    padding: 5px 10px;
-    margin: 10px 10px;
-    color: #ffffff;
-    font-size: 24px;
-    background-color: tomato;
-    border: solid 1px tomato;
-    border-radius: 20px;
-    transition: all 0.3s;
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 10px 10px;
+  color: #ffffff;
+  font-size: 24px;
+  background-color: tomato;
+  border: solid 1px tomato;
+  border-radius: 20px;
+  transition: all 0.3s;
 }
 
 .btn2:hover {
-    transform: translate(-2.5px, -2.5px);
-    color: white;
-    box-shadow: 5px 5px 0 0 #000;
+  transform: translate(-2.5px, -2.5px);
+  color: white;
+  box-shadow: 5px 5px 0 0 #000;
 }
 
 .back-btn {
-    display: inline-block;
-    padding: 5px 10px;
-    margin: 10px 10px;
-    text-align: center;
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 24px;
-    background-color: #828df5;
-    opacity: 0.8;
-    border-radius: 20px;
-    transition: all 0.3s;
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 10px 10px;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 24px;
+  background-color: #828df5;
+  opacity: 0.8;
+  border-radius: 20px;
+  transition: all 0.3s;
 }
 
 .back-btn:hover {
-    transform: translate(-2.5px, -2.5px);
-    color: white;
-    box-shadow: 5px 5px 0 0 #000;
+  transform: translate(-2.5px, -2.5px);
+  color: white;
+  box-shadow: 5px 5px 0 0 #000;
 }
-
 
 /* 投稿入力画面 */
 
 @media screen and (max-width: 768px) {
-    .skill-box {
-        width: 100%;
-    }
-    .skill-box2 {
-        width: 85%;
-        height: 90%;
-        margin: 0 auto;
-    }
-    .skill-box2 h2 {
-        font-size: 20px;
-    }
-    #skill-image {
-        width: 90%;
-        height: 90%;
-    }
-    .btn2 {
-        margin-left: 0;
-        width: 30%;
-        font-size: 15px;
-    }
-    .back-btn {
-        width: 30%;
-        font-size: 15px;
-    }
+  .skill-box {
+    width: 100%;
+  }
+  .skill-box2 {
+    width: 85%;
+    height: 90%;
+    margin: 0 auto;
+  }
+  .skill-box2 h2 {
+    font-size: 20px;
+  }
+  #skill-image {
+    width: 90%;
+    height: 90%;
+  }
+  .btn2 {
+    margin-left: 0;
+    width: 30%;
+    font-size: 15px;
+  }
+  .back-btn {
+    width: 30%;
+    font-size: 15px;
+  }
 }
