--- a/app/assets/stylesheets/stylesheets/shared/footer.css
+++ b/app/assets/stylesheets/stylesheets/shared/footer.css
@@ -11,3 +11,9 @@ footer {
   background: linear-gradient(to left, #928dab, #1f1c2c);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+@media screen and (max-width: 768px) {
+  . footer-first > p {
+    margin-top: -10px;
+  }
+}
